--- a/src/app/components/UI/NavButtons/NavButtons.module.css
+++ b/src/app/components/UI/NavButtons/NavButtons.module.css
@@ -1,10 +1,10 @@
-.container{
+.container {
     display: flex;
     align-items: center;
-    gap: 1em;
+    gap: 2vw;
 }
 
-.container button{
+.container button {
     padding: 0.75em 2em;
     border-radius: 0.5em;
     font-size: 1em;
@@ -16,7 +16,7 @@
     font-family: inherit;
 }
 
-.loginButton{
+.loginButton {
     border: 1px solid #E0E8E0;
     background-color: white;
     color: #0E2515;
@@ -24,10 +24,38 @@
     box-sizing: border-box;
 }
 
-.registerButton{
+.registerButton {
     background-color: #1C4A2A;
     cursor: pointer;
     color: white;
     border: none;
     box-sizing: border-box;
+}
+
+@media screen and (max-width:950px) {
+    .container {
+        gap: 1.5vw;
+    }
+}
+
+@media screen and (max-width:900px) {
+    .container {
+        gap: 1vw;
+    }
+}
+
+@media screen and (max-width:820px) {
+    .container {
+        gap: 0.5vw;
+    }
+
+    .container button {
+        padding: 0.75em 1.75em;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .container button {
+        padding: 0.75em 1.5em;
+    }
 }
