--- a/src/app/components/UI/NavHead/NavHead.module.css
+++ b/src/app/components/UI/NavHead/NavHead.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     padding: 1em;
-    gap: 1em;
+    gap: 3vw;
 }
 
 .logoFrame{
@@ -30,4 +30,16 @@
     color:#1C4A2A;
     height: 1em;
     margin: 0px;
+}
+
+@media screen and (max-width: 880px){ 
+    .container{
+        padding: 1em 0.5em;
+        gap:2.5vw;
+    }
+}
+@media screen and (max-width: 820px){ 
+    .container{
+        gap: 1vw;
+    }
 }
