--- a/src/app/components/UI/NavLinks/NavLinks.module.css
+++ b/src/app/components/UI/NavLinks/NavLinks.module.css
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     display: flex;
-    gap: 2.5em;
+    gap: 3vw;
     line-height: 100%;
     /* letter-spacing: -1rem; */
     text-align: center;
@@ -20,4 +20,32 @@
     color: #1C4A2A;
     font-weight: bold;
     text-decoration: none;
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        gap: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .container {
+        gap: 1.5vw;
+    }
+    .defaultLink, .currentPageLink {
+        font-size: 0.95em;
+    }
+}
+
+@media screen and (max-width:820px){
+    .container{
+        gap: 0.75vw;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .container {
+        flex-direction: column;
+        gap: 1.5em;
+    }
 }
