--- a/src/app/components/layouts/Navbar/Navbar.module.css
+++ b/src/app/components/layouts/Navbar/Navbar.module.css
@@ -1,20 +1,64 @@
 .container{
     z-index: 3;
-    position: sticky;
+    /* position: sticky;
     top: 0;
-    left: 0;
-    padding: 3vh 5vw;
+    left: 0; */
+    padding: 0.5em 1em;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     box-sizing: border-box;
     height: 12dvh;
     width: 100%;
     background-color: white;
+    max-width: 100vw;
+    overflow-x: hidden;
+    gap: 4vw;
 }
 
 .HeadLink{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    gap: 3.5em;
+    gap: 3vw;
+    white-space: nowrap;
+    flex: 1;
+    min-width: 0;
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        gap: 3vw;
+    }
+    .HeadLink {
+        gap: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .HeadLink{
+        gap:2vw;
+    }
+}
+
+@media screen and (max-width: 890px) {
+    .container{
+        gap:0;
+        padding: 0.5em;
+    }
+    .HeadLink{
+        gap: 0;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .container {
+        flex-direction: column;
+        gap: 0;
+    }
+    .HeadLink {
+        width: 100%;
+        flex-direction: column;
+        gap:1em;
+        margin-bottom: 1em;
+    }
 }
